--- a/packages/wagmi-safe-wait-for-tx/package.json
+++ b/packages/wagmi-safe-wait-for-tx/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moleculexyz/wagmi-safe-wait-for-tx",
   "license": "MIT",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "wagmi hooks that resolve Safe transaction hashes to onchain transaction hashes by Safe's transaction api",
   "repository": "moleculeprotocol/test-wagmi-safe-privy",
   "keywords": [
@@ -54,12 +54,13 @@
     "react": "^18",
     "rimraf": "^5.0.5",
     "typescript": "^5.0.4",
-    "viem": "^1.15.4",
-    "wagmi": "^1.4.3"
+    "viem": "^2.9.0",
+    "wagmi": "^2.5.0"
   },
   "peerDependencies": {
     "react": "^18",
     "typescript": ">=5.0.4",
-    "viem": ">=1.15.0"
+    "wagmi": ">=2.5.0",
+    "viem": ">=2.9.0"
   }
 }
