--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safetxdemo",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "postinstall": "wagmi generate && .bin/prefix.sh '// @ts-nocheck' 'src/generated/*.ts'",
@@ -15,22 +15,22 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@privy-io/react-auth": "^1.43.2",
-    "@moleculexyz/wagmi-safe-wait-for-tx": "0.2.0",
-    "@privy-io/wagmi-connector": "^0.1.4",
-    "@wagmi/chains": "^1.8.0",
+    "@moleculexyz/wagmi-safe-wait-for-tx": "1.0.0",
+    "@privy-io/react-auth": "^1.60.4",
+    "@privy-io/wagmi": "^0.2.3",
+    "@tanstack/react-query": "^5.29.2",
     "framer-motion": "^10.16.4",
-    "next": "13.5.4",
+    "next": "^14.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^1.15.4",
-    "wagmi": "^1.4.3"
+    "viem": "^2.9.16",
+    "wagmi": "^2.5.19"
   },
   "devDependencies": {
     "@types/node": "^18",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@wagmi/cli": "^1.5.2",
+    "@wagmi/cli": "^2.1.4",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "typescript": "^5.0.4"
